<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anubhav"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/textsize" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="101dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/green_bug"
        tools:srcCompat="@android:drawable/ic_media_next" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:autofillHints="Nick Name"
        android:ems="10"
        android:hint="@string/what_is_your_nick_name"
        android:inputType="textPersonName"
        android:textColor="@android:color/darker_gray" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:text="@string/textview1" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            android:textSize="20sp"/>
    </ScrollView>


</LinearLayout>